# wmux

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  config.example.jsonc  go.mod  go.sum  package.json  playwright.config.ts
cmd/wmux/: main.go
crates/wmux-core/: Cargo.toml
crates/wmux-core/src/: app.rs  http.rs  intelligence.rs  intelligence_task.rs  ipc_error.rs  lib.rs  logging.rs  middleware.rs  project_ai.rs  project_runtime.rs  routes.rs  skills.rs  state.rs  test_utils.rs
crates/wmux-core/src/config/: mod.rs  parser.rs
crates/wmux-core/src/handlers/: ai_logs.rs  ai_stats.rs  config.rs  connections.rs  health.rs  logs.rs  mod.rs  projects.rs  sessions.rs  skills.rs  terminal.rs  voice.rs  voice_history.rs
crates/wmux-core/src/handlers/voice/: voice_tests.rs
crates/wmux-core/src/protocol/: mod.rs
crates/wmux-core/src/services/: config.rs  connections.rs  mod.rs  projects.rs  sessions.rs  skills.rs  terminal.rs  voice.rs
crates/wmux-core/src/session/: mod.rs
crates/wmux-core/src/storage/: ai_logs.rs  ai_usage.rs  cleanup.rs  db.rs  mod.rs  models.rs  projects.rs  sync.rs  voice_history.rs
crates/wmux-core/src/tmux/: mod.rs  models.rs
crates/wmux-core/src/voice/: audit.rs  executor.rs  mod.rs  policy.rs
crates/wmux-server/: Cargo.toml
crates/wmux-server/src/: main.rs
internal/config/: config.go  config_test.go  intelligence_test.go
internal/intelligence/: aggregate.go  aggregate_test.go  analyzer.go  analyzer_test.go  doc.go  domain.go  domain_test.go  prompts.go  prompts_test.go  provider.go  provider_anthropic.go  provider_anthropic_test.go  provider_deepseek_test.go  provider_errors.go  provider_fake.go  provider_fake_test.go  provider_openai.go  provider_openai_test.go  provider_test.go  redact.go  redact_test.go  store.go  store_test.go
internal/protocol/: protocol.go  protocol_test.go
internal/semantic/: capture.go  capture_test.go  classifier.go  classifier_interface.go  classifier_test.go  doc.go  domain.go  domain_test.go  state.go
internal/server/: handlers_config.go  handlers_config_test.go  handlers_connections.go  handlers_connections_crud_test.go  handlers_connections_health_test.go  handlers_intelligence.go  handlers_intelligence_test.go  handlers_sessions.go  handlers_sessions_attention_test.go  handlers_sessions_semantic_test.go  handlers_sessions_test.go  handlers_terminal.go  handlers_terminal_test.go  middleware.go  routes.go  server.go  server_test.go
internal/session/: bridge.go  local_pty.go  session.go  session_test.go  ssh_pty.go
internal/sshclient/: remote.go  remote_test.go  sshclient.go  sshclient_test.go
internal/tmux/: attention.go  attention_test.go  models.go  tmux.go  tmux_test.go
skills/: agents.md  ai_logs.md  analysis.md  assistant.md  cancel_action.md  clear_pane.md  confirm_action.md  create_session.md  create_window.md  delete_session.md  delete_window.md  flow.md  get_config.md  invoke_backend_route.md  kill_pane.md  list_sessions.md  navigate_frontend.md  navigation.md  omni_settings.md  projects.md  read_pane_output.md  rename_session.md  rename_window.md  run_project.md  send_to_pane.md  system.md  ui.md
skills/ai-logs/: clear_ai_logs.md  list_ai_logs.md
skills/analysis/: analyze_session.md  cleanup_tmux_analysis.md  list_tmux_analysis.md
skills/flow/: confirm_action.md
skills/navigation/: get_current_focus.md  navigate_frontend.md
skills/projects/: create_project.md  delete_project.md  generate_project_ai_html.md  launch_project.md  list_projects.md  sync_project_from_tmux.md  update_project.md
skills/system/: check_health.md  invoke_backend_route.md
skills/tmux/: panes.md  sessions.md  windows.md
src-tauri/: Cargo.toml  Info.plist  config.default.jsonc  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: ai.rs  config_cmd.rs  connections.rs  logs.rs  mod.rs  projects.rs  sessions.rs  skills.rs  stream_poc.rs  terminal.rs  voice.rs  voice_history.rs
tests/e2e/: ai-logs.spec.ts  browser-navigation.spec.ts  connection-management.spec.ts  error-banner.spec.ts  error-logs.spec.ts  intelligence.spec.ts  pane-attention.spec.ts  smoke.spec.ts  (+10 more)
tests/e2e-deprecated/: settings-panel.spec.ts
web/: .prettierrc  assets.go  index.html  package.json  tsconfig.json  vite.config.ts
(+122 files in other folders)
