[package]
name = "wmux-tauri"
version = "0.1.0"
edition = "2024"
description = "Wmux Tauri desktop app"
default-run = "wmux-tauri"

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt"] }
wmux-core = { path = "../crates/wmux-core" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "test-util"] }
serde_json = "1"
